<resources>
    <string name="app_name">TODO_with_DATE</string>
    <string name="loginLogo">로그인</string>
    <string name="ed_idLogo">아이디</string>
    <string name="hint_id">아이디를 입력해주세요</string>
    <string name="ed_pwLogo">비밀번호</string>
    <string name="hint_pw">비밀번호를 입력해주세요</string>
    <string name="signUpLogo">회원가입</string>
    <string name="nickLogo">닉네임</string>
    <string name="hint_nick">닉네임을 입력해주세요</string>
    <string name="hint_resolution">각오를 입력해주세요</string>
    <string name="signUpLogo2">회원가입 하기</string>
    <string name="profile">프로필</string>
    <string name="list">리스트</string>
    <string name="date">날짜별</string>
</resources>