<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signlogo"
        android:text="@string/signUpLogo"
        android:textSize="50sp"
        android:fontFamily="@font/suit_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/signUpInput"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/signlogo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="54dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed_idLogo"
            android:text="@string/ed_idLogo"
            android:textSize="12sp"
            android:fontFamily="@font/suit_bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_id"
            android:hint="@string/hint_id"
            android:fontFamily="@font/suit_semibold"
            android:textSize="12sp"
            android:background="@drawable/input_field"
            android:padding="16dp"
            android:layout_marginBottom="26dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed_pwLogo"
            android:text="@string/ed_pwLogo"
            android:textSize="12sp"
            android:fontFamily="@font/suit_bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_pw"
            android:hint="@string/hint_pw"
            android:fontFamily="@font/suit_semibold"
            android:textSize="12sp"
            android:background="@drawable/input_field"
            android:padding="16dp"
            android:layout_marginBottom="26dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed_nickLogo"
            android:text="@string/nickLogo"
            android:textSize="12sp"
            android:fontFamily="@font/suit_bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_nick"
            android:hint="@string/hint_nick"
            android:fontFamily="@font/suit_semibold"
            android:textSize="12sp"
            android:background="@drawable/input_field"
            android:padding="16dp"
            android:layout_marginBottom="26dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed_resolutionLogo"
            android:text="각오(변경가능)"
            android:textSize="12sp"
            android:fontFamily="@font/suit_bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_resolution"
            android:hint="@string/hint_resolution"
            android:fontFamily="@font/suit_semibold"
            android:textSize="12sp"
            android:background="@drawable/input_field"
            android:padding="16dp"
            android:layout_marginBottom="26dp"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpLogo2"
        android:textColor="@color/black"
        android:id="@+id/btn_signUp"
        android:textSize="28sp"
        android:fontFamily="@font/suit_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="111dp"
        android:layout_marginStart="55dp"
        />

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/btn_arrow"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="558dp"
        app:layout_constraintEnd_toEndOf="@id/signUpInput"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="91dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>