<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginLogo"
        android:text="@string/loginLogo"
        android:textSize="50sp"
        android:fontFamily="@font/suit_bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/loginInput"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/loginLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="44dp"
        android:layout_marginTop="54dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed_idLogo"
            android:text="@string/ed_idLogo"
            android:textSize="12sp"
            android:fontFamily="@font/suit_bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            />
        <EditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_id"
            android:hint="@string/hint_id"
            android:fontFamily="@font/suit_semibold"
            android:textSize="12sp"
            android:background="@drawable/input_field"
            android:padding="16dp"
            android:layout_marginBottom="26dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed_pwLogo"
            android:text="@string/ed_pwLogo"
            android:textSize="12sp"
            android:fontFamily="@font/suit_bold"
            android:layout_marginStart="12dp"
            android:textColor="@color/black"
            />
        <EditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_pw"
            android:hint="@string/hint_pw"
            android:fontFamily="@font/suit_semibold"
            android:textSize="12sp"
            android:background="@drawable/input_field"
            android:padding="16dp"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/btn_signUp"
        android:text="회원가입"
        android:textColor="@color/black"
        android:fontFamily="@font/suit_semibold"
        app:layout_constraintTop_toBottomOf="@id/loginInput"
        app:layout_constraintEnd_toEndOf="@id/loginInput"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_marginHorizontal="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/loginLogo"
        android:textSize="29sp"
        android:textColor="@color/black"
        android:fontFamily="@font/suit_medium"
        android:background="@drawable/btn_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>